# automl-pipeine

./: .gitignore  Dockerfile  README.md  README_pypi.md  STRUCTURE.md  git-auto-push.bat  git-auto-push.ps1  git-auto-push.sh  pyproject.toml
.github/workflows/: publish.yml
autohf/: __init__.py
autohf/agents/: __init__.py  chat_agent.py  dataset_agent.py  model_agent.py  task_agent.py
autohf/api/: __init__.py  app.py
autohf/cli/: __init__.py  main.py  tui.py
autohf/core/: __init__.py  autohf.py  config.py
autohf/ranking/: __init__.py  dataset_ranker.py  model_ranker.py  semantic_ranker.py
autohf/training/: __init__.py  autogluon_trainer.py
tests/: test_config.py  test_task_agent.py
