[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autohf"
version = "0.1.0"
description = "One-line AutoML: from idea to trained model using Hugging Face + AutoGluon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AutoHF Contributors"},
]
keywords = ["automl", "huggingface", "autogluon", "machine-learning", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "huggingface-hub>=0.20.0",
    "datasets>=2.16.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
train = [
    "autogluon.tabular[all]>=1.0.0",
    "scikit-learn>=1.3.0",
]
search = [
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
autohf = "autohf.cli.main:app"

[tool.setuptools.packages.find]
include = ["autohf*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
